package Chapter04.framework;

public abstract class Product {
    public abstract void use();
}
